use python for selenium tests, break up syslogip

--- a/files/syslog_server.side.j2
+++ b/files/syslog_server.side.j2
@@ -101,7 +101,7 @@
         ["xpath=//div[@id='td_syslog_ip']/input", "xpath:idRelative"],
         ["xpath=//div/input", "xpath:position"]
       ],
-      "value": "123"
+      "value": "{{ip1}}"
     }, {
       "id": "307ebd16-0e5a-4ea9-82ba-f9f6a00152c2",
       "comment": "",
@@ -153,7 +153,7 @@
         ["xpath=//div[@id='td_syslog_ip']/input[2]", "xpath:idRelative"],
         ["xpath=//div/input[2]", "xpath:position"]
       ],
-      "value": "123"
+      "value": "{{ip2}}"
     }, {
       "id": "57472985-e420-42e1-baf3-70f0eb2ef84d",
       "comment": "",
@@ -205,7 +205,7 @@
         ["xpath=//div[@id='td_syslog_ip']/input[3]", "xpath:idRelative"],
         ["xpath=//input[3]", "xpath:position"]
       ],
-      "value": "123"
+      "value": "{{ip3}}"
     }, {
       "id": "0e70dd25-e3aa-49cf-9771-d4bb302a1e2d",
       "comment": "",
@@ -257,7 +257,7 @@
         ["xpath=//div[@id='td_syslog_ip']/input[4]", "xpath:idRelative"],
         ["xpath=//input[4]", "xpath:position"]
       ],
-      "value": "123"
+      "value": "{{ip4}}"
     }, {
       "id": "0db42f6e-50b3-4564-92e8-518045ee665b",
       "comment": "",
